@@ -99,42 +99,60 @@ function M_AddSimpleInviteField_BP() {
 		return;
 	}
 
-    ?><style>
-		#bp-default #invitecode-section {
-			float: left;
-		}
-	</style>
+    ?><style type="text/css"> #invitecode-section { clear: both; } </style>
 	<div id="invitecode-section" class="register-section">
-		<label for="invitecode"><?php _e( 'Invite Code', 'membership' ); ?></label>
-		<input type="text" autocomplete="off" class="input-xlarge" id="invitecode" name="invitecode">
+		<div class="editfield">
+			<label for="invitecode"><?php _e( 'Invite Code', 'membership' ); ?></label>
+			<?php do_action( 'bp_invitecode_errors' ) ?>
+			<input type="text" autocomplete="off" class="input-xlarge" id="invitecode" name="invitecode">
+		</div>
 	</div><?php
 }
 
-add_action( 'membership_popover_extend_registration_form', 'M_AddSimpleRegistrationInviteField' );
-function M_AddSimpleInviteFieldProcess($error) {
-    $Msi_options = M_get_option( 'membership_simpleinvite_options', array() );
-	if ( empty( $Msi_options['inviterequired'] ) || $Msi_options['inviterequired'] != 'yes' ) {
-		return $error;
-	}
-
-	if ( !is_wp_error( $error ) ) {
-		$error = new WP_Error();
-	}
-
-	$thekey = filter_input( INPUT_POST, 'invitecode' );
-	if ( empty( $thekey ) ) {
-		$error->add( 'enterinvitecode', __( 'You need to enter an invite code in order to register.', 'membership' ) );
-	} else {
-		$codes = array_map( 'trim', explode( "\n", $Msi_options['invitecodes'] ) );
-		if ( !in_array( $thekey, $codes ) ) {
-			$error->add( 'incorrectinvitecode', __( 'Sorry, but we do not seem to have that code on file, please try another.', 'membership' ) );
-		}
+add_filter( 'membership_subscription_form_before_registration_process', 'M_AddSimpleInviteFieldProcess' );
+function M_AddSimpleInviteFieldProcess( $error ) {
+	$message = M_SimpleInviteFieldValidate();
+	if ( $message !== true ) {
+		$error->add( 'enterinvitecode', $message );
 	}
 
 	return $error;
 }
 
-add_filter( 'membership_subscription_form_before_registration_process', 'M_AddSimpleInviteFieldProcess' );
+add_action( 'bp_signup_validate', 'M_AddSimpleInviteFieldProcess_BP' );
+function M_AddSimpleInviteFieldProcess_BP() {
+	global $bp;
+
+	if ( !$bp || !is_a( $bp, 'BuddyPress' ) ) {
+		return;
+	}
+
+	$message = M_SimpleInviteFieldValidate();
+	if ( $message !== true ) {
+		$bp->signup->errors['invitecode'] = $message;
+	}
+}
+
+function M_SimpleInviteFieldValidate() {
+	$Msi_options = M_get_option( 'membership_simpleinvite_options', array() );
+	if ( empty( $Msi_options['inviterequired'] ) || $Msi_options['inviterequired'] != 'yes' ) {
+		return true;
+	}
+
+	$thekey = filter_input( INPUT_POST, 'invitecode' );
+	if ( empty( $thekey ) ) {
+		return __( 'You need to enter an invite code in order to register.', 'membership' );
+	} else {
+		$codes = array_map( 'trim', explode( PHP_EOL, $Msi_options['invitecodes'] ) );
+		if ( !in_array( $thekey, $codes ) ) {
+			return __( 'Sorry, but we do not seem to have that code on file, please try another.', 'membership' );
+		}
+	}
+
+	return true;
+}
+
+add_action( 'membership_popover_extend_registration_form', 'M_AddSimpleRegistrationInviteField' );
 function M_AddSimpleRegistrationInviteField() {
 	$Msi_options = M_get_option( 'membership_simpleinvite_options', array() );
 	if ( !empty( $Msi_options['inviterequired'] ) && $Msi_options['inviterequired'] == 'yes' ) {
@@ -151,6 +169,12 @@ function M_RemoveInviteCode( WP_Error $error, $user_id ) {
 		return;
 	}
 
+	M_RemoveSimpleInviteCode();
+}
+
+add_action( 'bp_core_signup_user', 'M_RemoveSimpleInviteCode' );
+add_action( 'bp_core_signup_blog', 'M_RemoveSimpleInviteCode' );
+function M_RemoveSimpleInviteCode() {
     $Msi_options = M_get_option( 'membership_simpleinvite_options', array() );
 	if ( !isset( $Msi_options['inviteremove'] ) || !filter_var( $Msi_options['inviteremove'], FILTER_VALIDATE_BOOLEAN ) || !isset( $Msi_options['invitecodes'] ) ) {
 		return;
