@@ -1,6 +1,7 @@
 == 3.4.6 ==
 
-* Fixed issues invite codes which appears after each BuddyPress fields
+* Fixed issue with not required invite code at BuddyPress registration page
+* Fixed issue with invite codes which appears after each BuddyPress fields
 * Fixed issue with not redirected page after 100% discount coupon was applied
 * Fixed issue with empty page appeared after redirection to protected page
 * Fixed issue with coupon used count incrementation when 100% discount coupon is used
